--- a/home.html
+++ b/home.html
@@ -122,6 +122,16 @@
                                 <p>HBM company officially registered in the heart of Albion - London. Its activity is based on the basic principles of building a powerful, competitive business with sustainable growth and long-term prospects.</p>
                             </div>
                         </div>
+
+                        <div class="underSlider">
+                            <ul>
+                                <li><a class="underSlider__link" href=""><span class="underSlider__icon document-icon spriteMain"></span>ДОКУМЕНТЫ</a></li>
+                                <li><a class="underSlider__link" href=""><span class="underSlider__icon miniLogo-icon spriteMain"></span>BRANDBOOK</a></li>
+                                <li><a class="underSlider__link" href=""><span class="underSlider__icon reward-icon spriteMain"></span>TERMS&CONDITIONS</a></li>
+                                <li><a class="underSlider__link" href=""><span class="underSlider__icon privacy-icon  spriteMain"></span>PRIVACY POLICY</a></li>
+                            </ul>
+                        </div>
+                                                                  
                     </div>
 
                     <div class="col-md-5">
@@ -181,6 +191,24 @@
             </div>
         </div>
 
+        <div class="sectionAboutUs">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="videoImg">
+                            <img src="img/imgVideo-aboutUs.png" alt="">
+                            <div class="videoTooltip">
+                                <p>КРАТКАЯ ВИДЕОПРЕЗЕНТАЦИЯ</p>
+                                <span>О нас</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
