--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/fonts.css">
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
+        <link rel="stylesheet" href="css/reviews.css">
         <link rel="stylesheet" href="css/main.css">
         
 
@@ -66,7 +67,9 @@
                                                 <span>Language</span>
                                                 <p>English</p>
                                             </div>
-                                            <div class="headerLang__langBtn"></div>
+                                            <div class="headerLang__langBtn">
+                                                <div class="checkbox"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -191,29 +194,178 @@
             </div>
         </div>
 
-        <div class="sectionAboutUs">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <div class="videoImg">
-                            <img src="img/imgVideo-aboutUs.png" alt="">
-                            <div class="videoTooltip">
-                                <p>КРАТКАЯ ВИДЕОПРЕЗЕНТАЦИЯ</p>
-                                <span>О нас</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-7">
+        <div class="sectionAboutUs sectionShadow">
+        	<div class="container">
+        		<div class="row">
+        			<div class="col-md-5 padding_null">
+        				<div class="previewVideo previewVideoHome">
+        					<div class="previewVideo__bgRect"></div>
+        					<div class="previewVideo__top">
+        						<div class="previewVideo__playBtn">
+        							<div class="previewVideo__playBtnIcon"></div>
+        						</div>
+        					</div>
+        					<div class="previewVideo__bottom">
+        						<div class="review__reviewerInfo">
 
-                    </div>
-                </div>
-            </div>
+        							<div class="homePreview__title">
+        								<p>Краткая видеопрезентация</p>
+        								<p class="fontSize_20px">О нас</p>
+
+        							</div>
+
+        						</div>
+        					</div>
+        					<div class="previewVideo__thumbContainer previewHome__thumbContainer">
+        						<img src="img/imgVideo-aboutUs.png" alt="">
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-md-7">
+        				<div class="titleSkew__orange prieviewTitle"><span class="circleWhite-icon spriteMain"></span>Company Overview</div>
+        				<div class="previewText">
+        					<p>Here could be a beautiful legend about the creation of our company, the difficulties that we went through and the achievements that we are very proud of. Could, but will not. Because acquaintance with deception - not appropriate. At least for us.</p>
+        					<p>Who are we? We are a young creative team, changing the world; we make bold decisions, think globally and work with a common goal. We are confident of the success of those ideas that we embody in our work. To high professionalism, every member of our team went its own way, which taught how to work, so as to consistently achieve success. We are always looking for new ways to conquer new frontiers; implement breakthrough approaches to go further and faster. </p>
+        					<p>Speed, thirst, resourcefulness and agility inherent in the companies-newcomers, in our case, complemented by high professionalism and common sense, spirit and desire to change. And we believe that this combination of qualities makes us unique. </p>
+
+        					<button class="btn-grey">Investing now <span class="arrowRight-icon spriteMain"></span> </button>
+
+        				</div>
+        			</div>
+        		</div>
+        	</div>
         </div>
 
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/slick.min.js"></script>
-        <script src="js/main.js"></script>
+        <div class="sectionSteps">
+        	<div class="container">
+						<h1 class="sectionHeaderSquare">Four simple steps</h1>
+						<p class="sectionDescription">Due to expert assessments and calculations of our highly qualified specialists, our investment plan shows a great potential for dynamic growth and profitability at the same time. By investing in HBM, you become a partner of the company, where your interests become ours.</p>
+					</div>
+					<div class="stepContainer">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-2">
+
+									<div class="stepNumbers">
+										<ul>
+											<li class="stepNumbers__1 active">
+												<span class="stepNumbers__number">01</span>
+												<span class="stepNumbers__text">Registration</span>
+											</li>
+											<li class="stepNumbers__2">
+												<span class="stepNumbers__number">02</span>
+												<span class="stepNumbers__text">Investing</span>
+											</li>
+											<li class="stepNumbers__3">
+												<span class="stepNumbers__number">03</span>
+												<span class="stepNumbers__text">Trading</span>
+											</li>
+											<li class="stepNumbers__4">
+												<span class="stepNumbers__number">04</span>
+												<span class="stepNumbers__text">Profit</span>
+											</li>
+										</ul>
+									</div>
+
+								</div>
+								<div class="col-md-7">
+
+									<div class="sliderSteps">
+
+										<div id="sliderStep__item_1" class="sliderStep__item">
+											<div class="sliderStep__number">Step 1</div>
+											<div class="sliderStep__title">Registration your account on HBM Corporate</div>
+											<div class="sliderStep__text">
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+												<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+												<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+											</div>
+											<div class="sliderStep__button">
+												<button>Create new account</button>
+											</div>
+										</div>
+										<div id="sliderStep__item_2" class="sliderStep__item">
+											<div class="sliderStep__number">Step 2</div>
+											<div class="sliderStep__title">Investing</div>
+											<div class="sliderStep__text">
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+												<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+												<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+											</div>
+											<div class="sliderStep__button">
+												<button>Create new account</button>
+											</div>
+										</div>
+										<div id="sliderStep__item_3" class="sliderStep__item">
+											<div class="sliderStep__number">Step 3</div>
+											<div class="sliderStep__title">Trading</div>
+											<div class="sliderStep__text">
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+												<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+												<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+											</div>
+											<div class="sliderStep__button">
+												<button>Create new account</button>
+											</div>
+										</div>
+										<div id="sliderStep__item_4" class="sliderStep__item">
+											<div class="sliderStep__number">Step 4</div>
+											<div class="sliderStep__title">Profit</div>
+											<div class="sliderStep__text">
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+												<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+												<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+											</div>
+											<div class="sliderStep__button">
+												<button>Create new account</button>
+											</div>
+										</div>
+									</div>
+
+								</div>
+								<div class="col-md-3 padding_null">
+									<div class="sliderStepImgSlider">
+										<div><img class="sliderStepImg" src="img/sliderStepImg.png" alt=""></div>
+										<div><img class="sliderStepImg" src="img/sliderStepImg2.png" alt=""></div>
+										<div><img class="sliderStepImg" src="img/sliderStepImg3.png" alt=""></div>
+										<div><img class="sliderStepImg" src="img/sliderStepImg.png" alt=""></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+        </div>
+      </div>
+
+
+      <footer>
+      	<div class="topFooterBar">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="FooterPaymentsOrange">
+									<div class="topFooterBar__title">
+										<b>PAYMENT</b>
+										<span>System</span>
+									</div>
+									<div class="topFooterBar__payments">
+										<img src="img/paymentsBg.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+      	</div>
+      	<div class="container">
+					
+      	</div>
+      </footer>
+
+
+      <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+      <script src="js/slick.min.js"></script>
+      <script src="js/main.js"></script>
     </body>
 </html>
