Added footer, home final, page plans

--- a/faq.html
+++ b/faq.html
@@ -147,6 +147,84 @@
             </div>
         </div>
 
+        <footer>
+            <div class="topFooterBar">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="FooterPaymentsOrange">
+                                <div class="topFooterBar__title">
+                                    <b>PAYMENT</b>
+                                    <span>System</span>
+                                </div>
+                                <div class="topFooterBar__payments">
+                                    <img src="img/paymentsBg.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="bottomFooterBar">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="footerContent">
+
+                                <div class="mainInfo">
+                                    <img src="img/footer_logo.png" alt="">
+                                    <p>© 2017 Profitable Morrows PTY LTD. All rights reserved.</p>
+                                    <p>Profitable Morrows PTY LTD is a registered company under the</p>
+                                    <p>Corporations Act 2001 in the Australian Capital Territory.</p>
+                                    <div class="socialMedia">
+                                        <a class="fb__icon" href=""></a>
+                                        <a class="inst__icon" href=""></a>
+                                        <a class="in__icon" href=""></a>
+                                        <a class="twi__icon" href=""></a>
+                                        <a class="yt__icon" href=""></a>
+                                    </div>
+                                </div>
+
+                                <div class="helpfulLinks">
+                                    <ul>
+                                        <li><a href="">Partnership program</a></li>
+                                        <li><a href="">Investment program</a></li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="">FAQ</a></li>
+                                        <li><a href="">Customer Support</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="helpfulLinks">
+                                    <ul>
+                                        <li><a href="">Partnership program</a></li>
+                                        <li><a href="">Investment program</a></li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="">FAQ</a></li>
+                                        <li><a href="">Customer Support</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="documentsContainer">
+                                    <ul>
+                                        <li><a href=""><span class="document-icon"></span>Documents</a></li>
+                                        <li><a href=""><span class="reward-icon"></span>Terms&Conditions</a></li>
+                                        <li><a href=""><span class="privacy-icon"></span>Privacy policy</a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
