Full Front without adaptive

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="css/fonts.css">
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
-        <link rel="stylesheet" href="css/reviews.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/media.css">
         
 
     </head>
@@ -31,16 +31,16 @@
                     <div class="row justify-content-center">
                         <div class="col-md-12">
                             <ul class="mainHeaderMenu">
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">HOME PAGE</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="home.html">HOME PAGE</a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">DUBAI'18 </a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">INVESTORS</a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">ABOUT US </a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Marketing</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">PARTNERS</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">FAQ</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">NEWS</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Review</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">CONTACTS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="partners.html">PARTNERS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="faq.html">FAQ</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="news.html">NEWS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="review.html">Review</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="contacts.html">CONTACTS</a></li>
                             </ul>
                         </div>
                     </div>
