--- a/plans.html
+++ b/plans.html
@@ -14,8 +14,6 @@
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/partners.css">
-        <link rel="stylesheet" href="css/plans.css">
         
 
     </head>
@@ -32,16 +30,16 @@
                     <div class="row justify-content-center">
                         <div class="col-md-12">
                             <ul class="mainHeaderMenu">
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">HOME PAGE</a></li>
+                               <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="home.html">HOME PAGE</a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">DUBAI'18 </a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">INVESTORS</a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">ABOUT US </a></li>
                                 <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Marketing</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">PARTNERS</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">FAQ</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">NEWS</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Review</a></li>
-                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">CONTACTS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="partners.html">PARTNERS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="faq.html">FAQ</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="news.html">NEWS</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="review.html">Review</a></li>
+                                <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="contacts.html">CONTACTS</a></li>
                             </ul>
                         </div>
                     </div>
@@ -112,7 +110,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="pageHeader">Investment Portfolios</h1>
+                    <h1 class="pageHeader pageLong">Investment Portfolios</h1>
                     <p class="pageDescription">Due to expert assessments and calculations of our highly qualified specialists, our investment plan shows a great potential for dynamic growth and profitability at the same time. By investing in HBM, you become a partner of the company, where your interests become ours.</p>
                 </div>
             </div>
@@ -280,7 +278,7 @@
 					</div>
         </div>
 
-        <div class="planSectionItem sectionShadow">
+        <div class="planSectionItem">
         	<div class="container">
             <div class="row">
 							<div class="col-md-12">
@@ -355,6 +353,15 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 								</div>
 							</div>
+							<div class="col-md-12">
+								<div class="wrap_chart">
+									<canvas id="chart-2"></canvas>
+								</div>
+								<div class="under_chart">
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+								</div>
+							</div>
+							
 						</div>
 					</div>
         </div>
@@ -441,8 +448,11 @@
 
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="http://www.chartjs.org/dist/2.7.0/Chart.bundle.js"></script>
+				<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <script src="js/graphs.js"></script>	
 
         <script src="js/slick.min.js"></script>
         <script src="js/main.js"></script>
