--- a/partners.html
+++ b/partners.html
@@ -14,6 +14,7 @@
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/partners.css">
         
 
     </head>
@@ -117,7 +118,7 @@
         <div class="sectionPartners">
             <div class="container">
                 <div class="row sectionPartners__item">
-                    <div class="col-md-8 partner__descrPart">
+                    <div class="col-lg-8 partner__descrPart">
                         <img src="img/partner_rank1.png" alt="">
 
                         <div class="partner__description">
@@ -138,7 +139,7 @@
                             <p>Партнер, который сделает личный вклад $ 500 и привлечет в проект инвестиции суммарной стоимостью в $10.000 - получает в подарок $ 500 на свой баланс. Средства можно вывести в любое время.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 partner__earningsPart">
+                    <div class="col-lg-4 partner__earningsPart">
                         <div class="earnings">
                             <div class="investments">
                                 <p>Личный вклад</p>
@@ -165,7 +166,7 @@
                 </div>
 
                 <div class="row sectionPartners__item">
-                    <div class="col-md-8 partner__descrPart">
+                    <div class="col-lg-8 partner__descrPart">
                         <img src="img/partner_rank2.png" alt="">
 
                         <div class="partner__description">
@@ -186,7 +187,7 @@
                             <p>Партнер, который сделает личный вклад $ 500 и привлечет в проект инвестиции суммарной стоимостью в $10.000 - получает в подарок $ 500 на свой баланс. Средства можно вывести в любое время.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 partner__earningsPart">
+                    <div class="col-lg-4 partner__earningsPart">
                         <div class="earnings">
                             <div class="investments">
                                 <p>Личный вклад</p>
