--- a/news.html
+++ b/news.html
@@ -14,10 +14,6 @@
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/partners.css">
-        <link rel="stylesheet" href="css/plans.css">
-        <link rel="stylesheet" href="css/reviews.css">
-        <link rel="stylesheet" href="css/news.css">
         
 
     </head>
@@ -50,6 +46,63 @@
                 </div>
             </div>
 
+            <div class="btn_toggle">
+                <span class="btn_toggle_top"></span>
+                <span class="btn_toggle_middle"></span>
+                <span class="btn_toggle_bottom"></span>
+            </div>
+
+            <div class="mobileMenu">
+                <ul class="mainHeaderMenu">
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="home.html">HOME PAGE</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">DUBAI'18 </a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">INVESTORS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">ABOUT US </a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Marketing</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="partners.html">PARTNERS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="faq.html">FAQ</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="news.html">NEWS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="review.html">Review</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="contacts.html">CONTACTS</a></li>
+                </ul>
+                <div class="headerLang">
+                    <div class="headerLang__lang_main">
+                        <img class="headerLang__langImg" src="img/lang-en.png" alt="">
+                        <div class="headerLang__langName">
+                            <span>Language</span>
+                            <p>English</p>
+                        </div>
+                        <div class="headerLang__langBtn">
+                            <div class="checkbox"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="headerAuth">
+                    <div class="headerAuth__item headerLogin">
+                        <a href="">
+                            <div class="headerAuth__imgUser headerAuth__imgUser_login spriteMain">
+                            </div>
+                            <div class="headerAuth__text">
+                                <p>PERSONAL AREA</p>
+                                <span>LOGIN TO YOUR ACCOUNT</span>
+
+                            </div>
+                        </a>
+                    </div>
+                    <div class="headerAuth__item headerReg">
+                        <a href="">
+                            <div class="headerAuth__imgUser headerAuth__imgUser_reg spriteMain">
+
+                            </div>
+                            <div class="headerAuth__text">
+                                <p>CREATE ACCOUNT</p>
+                                <span>COMPLETE REGISTRATION</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <div class="bottomHeaderMenu">
                 <div class="container">
                     <div class="row">
@@ -60,7 +113,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 hidden-sm">
                             <div class="row">
                                 <div class="col-md-3 padding_null">
                                     <div class="headerLang">
@@ -123,7 +176,7 @@
         <div class="newsSection sectionShadow">
         	<div class="container">
             <div class="row">
-							<div class="col-md-6">
+							<div class="col-lg-6 col-md-12">
 								<div class="videoNews margin__null">
 									<div class="videoNews__previewSliderWrapper videoNewsSection__previewSliderWrapper">
 										<div class="videoNewsSectionSlider">
@@ -175,7 +228,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-lg-6 col-md-12">
 								<div class="newsItems">
 									<div class="pressCenterSlider__item">
 	                    <div class="pressCenterSlider__cont">
@@ -245,7 +298,7 @@
         <div class="newsList">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-8">
+							<div class="col-md-12 col-lg-8">
 								<div class="newsList__item">
 									<div class="row">
 										<div class="col-md-5 paddingRight_null">
@@ -331,7 +384,7 @@
 									
 								</div>
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-12 col-lg-4">
 								<div class="newsList__menu">
 									<div class="newsList__title">
 										<div class="newsList__titleItem activeTitle" data-list="0">
