--- a/home.html
+++ b/home.html
@@ -14,7 +14,6 @@
          <link rel="stylesheet" href="css/slick.css">
         <link rel="stylesheet" href="css/slick-theme.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/media.css">
         
 
     </head>
@@ -47,6 +46,63 @@
                 </div>
             </div>
 
+            <div class="btn_toggle">
+                <span class="btn_toggle_top"></span>
+                <span class="btn_toggle_middle"></span>
+                <span class="btn_toggle_bottom"></span>
+            </div>
+
+            <div class="mobileMenu">
+                <ul class="mainHeaderMenu">
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="home.html">HOME PAGE</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">DUBAI'18 </a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">INVESTORS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">ABOUT US </a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="">Marketing</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="partners.html">PARTNERS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="faq.html">FAQ</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="news.html">NEWS</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="review.html">Review</a></li>
+                    <li class="mainHeaderMenu__listItem"><a class="mainHeaderMenu__linkItem" href="contacts.html">CONTACTS</a></li>
+                </ul>
+                <div class="headerLang">
+                    <div class="headerLang__lang_main">
+                        <img class="headerLang__langImg" src="img/lang-en.png" alt="">
+                        <div class="headerLang__langName">
+                            <span>Language</span>
+                            <p>English</p>
+                        </div>
+                        <div class="headerLang__langBtn">
+                            <div class="checkbox"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="headerAuth">
+                    <div class="headerAuth__item headerLogin">
+                        <a href="">
+                            <div class="headerAuth__imgUser headerAuth__imgUser_login spriteMain">
+                            </div>
+                            <div class="headerAuth__text">
+                                <p>PERSONAL AREA</p>
+                                <span>LOGIN TO YOUR ACCOUNT</span>
+
+                            </div>
+                        </a>
+                    </div>
+                    <div class="headerAuth__item headerReg">
+                        <a href="">
+                            <div class="headerAuth__imgUser headerAuth__imgUser_reg spriteMain">
+
+                            </div>
+                            <div class="headerAuth__text">
+                                <p>CREATE ACCOUNT</p>
+                                <span>COMPLETE REGISTRATION</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <div class="bottomHeaderMenu">
                 <div class="container">
                     <div class="row">
@@ -57,7 +113,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 hidden-sm">
                             <div class="row">
                                 <div class="col-md-3 padding_null">
                                     <div class="headerLang">
@@ -197,7 +253,7 @@
         <div class="sectionAboutUs sectionShadow">
         	<div class="container">
         		<div class="row">
-        			<div class="col-md-5 padding_null">
+        			<div class="col-md-12 col-lg-5 padding_null">
         				<div class="previewVideo previewVideoHome">
         					<div class="previewVideo__bgRect"></div>
         					<div class="previewVideo__top">
@@ -221,7 +277,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-md-7">
+        			<div class="col-md-12 col-lg-7">
         				<div class="titleSkew__orange prieviewTitle"><span class="circleWhite-icon spriteMain"></span>Company Overview</div>
         				<div class="previewText">
         					<p>Here could be a beautiful legend about the creation of our company, the difficulties that we went through and the achievements that we are very proud of. Could, but will not. Because acquaintance with deception - not appropriate. At least for us.</p>
@@ -357,7 +413,7 @@
             <div class="sectionPlans__cards">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-7">
+                        <div class="col-md-12 col-lg-7">
 
                             <div class="planCardItem">
                                 <div class="row">
@@ -445,7 +501,7 @@
 
 
                         </div>
-                        <div class="col-md-5 paddingBottom_50px">
+                        <div class="col-md-12 col-lg-5 paddingBottom_50px">
                             <div class="planCalculate">
                                 <div class="calculateTopBar">
                                     <div class="calculateTopBar__upBlock">
